--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <h1> Bruno e Marrone </h1>
     <nav>
         <a href="#">Início</a>
         <a href="#">Sobre</a>
         <a href="#">Contato</a>
+        </nav>
+    </header>
 </body>
 </html>
