--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
             <a href="#">Contato</a>
         </nav>
     </header>
+
+     <main>
+        <section>
+            <h2>Sobre mim</h2>
+            <p>Esse é o meu primeiro site feito com HTML e CSS.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 - Meu Nome</p>
+    </footer>
 </body>
 </html>
