--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
         <nav>
             <a href="#">Início</a>
             <a href="#">Sobre</a>
-            <a href="#">Contato</a>
+            <a href="#">Agenda</a>
         </nav>
     </header>
 
      <main>
         <section>
-            <h2>Sobre mim</h2>
-            <p>Esse é o meu primeiro site feito com HTML e CSS.</p>
+            <h2>Sobre</h2>
+            <p>Bruno & Marrone é uma das duplas sertanejas mais conhecidas do Brasil. Formada por 
+            Vinícius Félix de Miranda (Bruno) e José Roberto Ferreira (Marrone), a dupla iniciou 
+                sua carreira na década de 1980, mas alcançou o sucesso nacional no final dos anos 1990 e 
+                início dos anos 2000, com hits como "Dormi na Praça", "Choram as Rosas" e "Vidro Fumê"..</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 - Meu Nome</p>
+        <p>&copy;- 2025 -</p>
     </footer>
 </body>
 <link rel="stylesheet" href="style.css">
