--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <main>
         <section>
             <h2>Sobre</h2>
-            <p>Bruno & Marrone é uma das duplas sertanejas mais conhecidas do Brasil. Formada por Vinícius Félix de Miranda (Bruno) e José Roberto Ferreira (Marrone), a dupla iniciou sua carreira na década de 1980, mas alcançou o sucesso nacional no final dos anos 1990 e início dos anos 2000, com hits como "Dormi na Praça", "Choram as Rosas" e "Vidro Fumê"..</p>
+            <p> Bruno & Marrone é uma das duplas sertanejas mais conhecidas do Brasil. Formada por Vinícius Félix de Miranda (Bruno) e José Roberto Ferreira (Marrone), a dupla iniciou sua carreira na década de 1980, mas alcançou o sucesso nacional no final dos anos 1990 e início dos anos 2000, com hits como "Dormi na Praça", "Choram as Rosas" e "Vidro Fumê". </p>
         </section>
     </main>
 
