--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1> Bruno e Marrone </h1>
         <nav>
             <a href="#">Início</a>
-            <a href="#">Sobre</a> 
+            <a href="sobre.html">Sobre</a> 
             <a href="#">Agenda</a>
         </nav>
     </header>
@@ -23,7 +23,7 @@
     </main>
 
     <footer>
-        <p>&copy;- 2025 -</p>
+        <p>&copy; - 2025 - </p>
     </footer>
 </body>
 <link rel="stylesheet" href="style.css">
