--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1> Bruno e Marrone </h1>
         <nav>
-            <a href="#">Início</a>
+            <a href="index.html">Início</a>
             <a href="sobre.html">Sobre</a> 
             <a href="#">Agenda</a>
         </nav>
@@ -23,8 +23,9 @@
     </main>
 
     <footer>
-        <p>&copy; - 2025 - </p>
+        <p>&copy;2025</p>
     </footer>
 </body>
 <link rel="stylesheet" href="style.css">
+<link href="sobre.html">
 </html>
