--- a/sobre.html
+++ b/sobre.html
@@ -16,12 +16,12 @@
     </header>
 
     <main>
-        <h2>Quem sou eu?</h2>
-        <p>Este site foi criado como exemplo de um projeto básico em HTML e CSS.</p>
+        <h2>Sobre A Dupla?</h2>
+        <p>E</p>
     </main>
 
     <footer>
-        <p>&copy; - 2025 - </p>
+        <p>&copy;</p>
     </footer>
 </body>
 </html>
