--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     </main>
 
     <footer>
-        <p>&copy;2025</p>
+        <p>&copy;</p>
     </footer>
 </body>
 <link rel="stylesheet" href="style.css">
-<link href="sobre.html">
 </html>
