--- a/sobre.html
+++ b/sobre.html
@@ -11,12 +11,12 @@
         <h1>Sobre o Site</h1>
         <nav>
             <a href="index.html">Início</a>
-            <a href="sobre.html">Sobre</a>
+            <a href="sobre.html" class="botao">Visitar site</a>
         </nav>
     </header>
 
     <main>
-        <h2>Sobre A Dupla?</h2>
+        <h2>Sobre A Dupla</h2>
         <p>E</p>
     </main>
 
