--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,7 @@
         <h1>Sobre o Site</h1>
         <nav>
             <a href="index.html">Início</a>
-            <a href="sobre.html" class="botao">Visitar site</a>
+            <a href="sobre.html" class="botao"></a>
         </nav>
     </header>
 
