--- a/sobre.html
+++ b/sobre.html
@@ -12,12 +12,13 @@
         <nav>
             <a href="index.html">Início</a>
             <a href="sobre.html" class="botao"></a>
+            <a href="#">Agenda</a>
         </nav>
     </header>
 
     <main>
         <h2>Sobre A Dupla</h2>
-        <p>E</p>
+        <p>Bruno & Marrone é uma das duplas sertanejas mais conhecidas do Brasil. Formada por Vinícius Félix de Miranda (Bruno) e José Roberto Ferreira (Marrone), a dupla iniciou sua carreira na década de 1980, mas alcançou o sucesso nacional no final dos anos 1990 e início dos anos 2000, com hits como "Dormi na Praça", "Choram as Rosas" e "Vidro Fumê". </p>
     </main>
 
     <footer>
