--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
      <main>
         <section>
-            <h2>Sobre</h2>
-            <p> 
+            <h2>Carreira</h2>
+            <p> Bruno & Marrone são uma dupla sertaneja brasileira formada em Bruno (Vinícius Félix de Miranda) e Marrone (José Roberto Ferreira). Eles iniciaram a carreira nos anos 1980, mas o sucesso nacional veio a partir de 2001, com o álbum "Acústico ao Vivo", que trouxe hits como "Dormi na Praça" e consolidou seu nome no cenário musical.
+                Conhecidos pelo estilo romântico e por vozes marcantes, Bruno & Marrone tornaram-se uma das duplas sertanejas mais populares do Brasil, acumulando milhões de discos vendidos, diversos prêmios (como o Grammy Latino) e uma base de fãs fiel. Ao longo dos anos, adaptaram-se às mudanças do mercado musical sem perder sua identidade, mantendo relevância com sucessos como "Vidro Fumê", "Choram as Rosas" e "Boate Azul". </p>
         </section>
     </main>
 
