--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Sobre o Site</h1>
+        <h1>Sobre</h1>
         <nav>
             <a href="index.html">Início</a>
             <a href="sobre.html" class="botao"></a>
@@ -18,7 +18,7 @@
 
     <main>
         <h2>Sobre A Dupla</h2>
-        <p>Bruno & Marrone é uma das duplas sertanejas mais conhecidas do Brasil. Formada por Vinícius Félix de Miranda (Bruno) e José Roberto Ferreira (Marrone), a dupla iniciou sua carreira na década de 1980, mas alcançou o sucesso nacional no final dos anos 1990 e início dos anos 2000, com hits como "Dormi na Praça", "Choram as Rosas" e "Vidro Fumê". </p>
+        <p> Esse site tem como objetivo trazer atualizações da carreira da  dupla Bruno e Marrone</p>
     </main>
 
     <footer>
