--- a/agenda.html
+++ b/agenda.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre a dupla sertenaja mais badalada</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Agenda dos Mais Mais do Sertanejo</title>
 </head>
 <body>
     <header>
-        <h1>Sobre</h1>
+        <h1>Agenda de Shows</h1>
         <nav>
             <a href="index.html">Início</a>
             <a href="sobre.html" class="botao"></a>
@@ -17,12 +16,12 @@
     </header>
 
     <main>
-        <h2>Sobre A Dupla</h2>
-        <p> Esse site tem como objetivo trazer atualizações da carreira da  dupla Bruno e Marrone</p>
+        <h2>Próximos Shows</h2>
+        <p> O Show mais esperado da dupla será na incrivel cidade de Curitiba, no dia 16/08</p>
     </main>
 
     <footer>
         <p>&copy;</p>
-    </footer>
+    </footer> 
 </body>
 </html>
