--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="index.html">Início</a>
             <a href="sobre.html">Sobre</a> 
-            <a href="#">Agenda</a>
+            <a href="agenda.html">Agenda</a>
         </nav>
     </header>
 
