--- a/agenda.html
+++ b/agenda.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda dos Mais Mais do Sertanejo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Agenda de Shows</h1>
         <nav>
             <a href="index.html">Início</a>
-            <a href="sobre.html" class="botao"></a>
-            <a href="agenda.html">Agenda</a>
+            <a href="sobre.html"class="botao"></a>
+            <a href="agenda.html"class="botao"></a>
         </nav>
     </header>
 
